codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 4746
expression: terminal.backend()
---
"                                                                                "
"• Analyzing · gpt-5.4 (reasoning default) · (0s • esc to pause)                 "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.4 default · 100% left · ~/workspace/custom-builds/codex/codex-rs/tui    "
