codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"  1 background terminal running · /ps to view                                   "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.4 default · 100% left · ~/workspace/custom-builds/codex/codex-rs/tui    "
